--- a/_includes/intereses.html
+++ b/_includes/intereses.html
@@ -1,24 +1,42 @@
 <div class="intereses">
   <h3>Tasa de interés</h3>
   <table>
+    <thead>
+      <tr>
+        <td>Tipo de tasa</td>
+        <td>Periodo</td>
+        <td>Colones</td>
+        <td>Dólares</td>
+      </tr>
+    </thead>
+  </table>
+  <table>
     <tbody>
-      {% for interes in site.data.generales.intereses %}
-        <tr>
-          <td>
-            {{ interes[0] | capitalize }}
-          </td>
-        </tr>
-        {% for periodo in interes[1] %}
-          <tr>
-            <td>
-              {{ periodo[0] | capitalize }}
-              {{ periodo }}
-            </td>
-          </tr>
-        {% endfor %}
-
-      {% endfor %}
-    <tbody>
+      <tr>
+        <td>Preferencial</td>
+        <td>Mensual</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.colones[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.dolares[page.color] }}</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>Anual</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.colones[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.dolares[page.color] }}</td>
+      </tr>
+      <tr>
+        <td>Normal</td>
+        <td>Mensual</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.color] }}</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>Anual</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.color] }}</td>
+      </tr>
+    </tbody>
   </table>
 
   <p class="disclaimer">
