--- a/_layouts/tarjetas.html
+++ b/_layouts/tarjetas.html
@@ -9,7 +9,11 @@ layout: default
   </header>
 
   <div class="post-content">
-    {{ content }}
+
+    <dl>
+      <dd>Tipo de tarjeta</dd>
+      <dt>{{ page.color }}</dt>
+    </dl>
 
     {% include intereses.html %}
 
