--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,19 @@
 
   <body>
 
-    {% include header.html %}
+    <div class="container">
+      {% include header.html %}
+    </div>
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <div class="row">
+      {% include navigation.html %}
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          {{ content }}
+        </div>
       </div>
     </div>
 
