Progress in Tarjetas layout

--- a/_layouts/tarjeta.html
+++ b/_layouts/tarjeta.html
@@ -10,11 +10,39 @@ layout: default
 
   <div class="post-content">
     <dl>
-      <dt>Marca</dt>
-      <dd>{{ page.marca }}</dd>
+      <!-- Add marca y categoría -->
+      <dt>Beneficio</dt>
+      <dd>{{ page.beneficio }}</dd>
 
-      <dt>Categoría</dt>
-      <dd>{{ page.categoria }}</dd>
+      <dt>Breve descripción</dt>
+      <dd>{{ page.breveDescripcion }}</dd>
+
+      <dt>Principal Beneficio</dt>
+      <dd>{{ page.principalBeneficio }}</dd>
+
+      <dt>Beneficios Generales</dt>
+      <dd>{{ page.beneficiosGenerales }}</dd>
+
+      <dt>Modalidad de acumulación</dt>
+      <dd>{{ page.modalidadDeAcumulacion }}</dd>
+
+      <dt>Otros Beneficios</dt>
+      <dd>{{ page.otrosBeneficios }}</dd>
+
+      <dt>Uso</dt>
+      <dd>{{ page.uso }}</dd>
+
+      <dt>Tipo de cliente</dt>
+      <dd>{{ page.tipoDeCliente }}</dd>
+
+      <dt>Cargo Administrativo</dt>
+      <dd>{{ page.cargoAdministrativo }}</dd>
+
+      <dt>Anualidad</dt>
+      <dd>{{ page.anualidad }}</dd>
+
+      <dt>Requisitos</dt>
+      <dd>{{ page.requisitos }}</dd>
     </dl>
   </div>
 
