--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <div class="site-nav">
   <nav class="container">
-    {% for my_page in site.pages %}
-      {% if my_page.title %}
+    {% for my_page in site.pages%}
+      {% if my_page.title and my_page.menu == 'si'%}
       <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
       {% endif %}
     {% endfor %}
