--- a/_layouts/tarjeta.html
+++ b/_layouts/tarjeta.html
@@ -30,7 +30,13 @@ layout: default
       <dd>{{ page.otrosBeneficios }}</dd>
 
       <dt>Uso</dt>
-      <dd>{{ page.uso }}</dd>
+      <dd>
+        <ul>
+          {% for uso in page.uso %}
+            <li>{{uso}}</li>
+          {% endfor %}
+        </ul>
+      </dd>
 
       <dt>Tipo de cliente</dt>
       <dd>{{ page.tipoDeCliente }}</dd>
@@ -42,7 +48,13 @@ layout: default
       <dd>{{ page.anualidad }}</dd>
 
       <dt>Requisitos</dt>
-      <dd>{{ page.requisitos }}</dd>
+      <dd>
+        <ul>
+          {% for requisito in page.requisitos %}
+            <li>{{requisito}}</li>
+          {% endfor %}
+        </ul>
+      </dd>
     </dl>
   </div>
 
