--- a/_layouts/tarjeta.html
+++ b/_layouts/tarjeta.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 <article class="post">
 
   <header class="post-header">
@@ -10,7 +9,20 @@ layout: default
 
   <div class="post-content">
     <dl>
-      <!-- Add marca y categoría -->
+      <dt>Marca</dt>
+      {% for marca in site.data.contentful.spaces.tarjetas.marca %}
+        {% if marca.sys.id == page.marca.sys.id %}
+          <dd>{{ marca.titulo }}</dd>
+        {% endif %}
+      {% endfor %}
+
+      <dt>Categoría</dt>
+      {% for categoria in site.data.contentful.spaces.tarjetas.categoria %}
+        {% if categoria.sys.id == page.categoria.sys.id %}
+          <dd>{{ categoria.titulo }}</dd>
+        {% endif %}
+      {% endfor %}
+
       <dt>Beneficio</dt>
       <dd>{{ page.beneficio }}</dd>
 
@@ -21,13 +33,23 @@ layout: default
       <dd>{{ page.principalBeneficio }}</dd>
 
       <dt>Beneficios Generales</dt>
-      <dd>{{ page.beneficiosGenerales }}</dd>
+      <dd>
+        <ul>
+          {% assign items = page.beneficiosGenerales | newline_to_br | split: '<br />' %}
+          {% for item in items %}<li>{{ item }}</li>{% endfor %}
+        </ul>
+      </dd>
 
       <dt>Modalidad de acumulación</dt>
       <dd>{{ page.modalidadDeAcumulacion }}</dd>
 
       <dt>Otros Beneficios</dt>
-      <dd>{{ page.otrosBeneficios }}</dd>
+      <dd>
+        <ul>
+          {% assign items = page.otrosBeneficios | newline_to_br | split: '<br />' %}
+          {% for item in items %}<li>{{ item }}</li>{% endfor %}
+        </ul>
+      </dd>
 
       <dt>Uso</dt>
       <dd>
