--- a/_includes/intereses.html
+++ b/_includes/intereses.html
@@ -9,26 +9,24 @@
         <td>Dólares</td>
       </tr>
     </thead>
-  </table>
-  <table>
     <tbody>
       <tr>
         <td>Preferencial</td>
         <td>Mensual</td>
-        <td>{{ site.data.generales.intereses.preferencial.mensual.colones[page.color] }}</td>
-        <td>{{ site.data.generales.intereses.preferencial.mensual.dolares[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.colones[color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.dolares[color] }}</td>
       </tr>
       <tr>
         <td></td>
         <td>Anual</td>
-        <td>{{ site.data.generales.intereses.preferencial.anual.colones[page.color] }}</td>
-        <td>{{ site.data.generales.intereses.preferencial.anual.dolares[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.colones[color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.dolares[color] }}</td>
       </tr>
       <tr>
         <td>Normal</td>
         <td>Mensual</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.color] }}</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[color] }}</td>
       </tr>
       <tr>
         <td></td>
