--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,7 +37,7 @@ dl, dd, ol, figure{
     color: $gris_oscuro;
   }
 }
-
+/*
 dl {
   width: 100%;
   overflow: hidden;
@@ -65,6 +65,7 @@ dt:after {
   display: table;
   clear: both;
 }
+*/
 //Secciones
 
 header{
