Nuevo layout de tarjetas y nueva información

--- a/_includes/intereses.html
+++ b/_includes/intereses.html
@@ -13,26 +13,26 @@
       <tr>
         <td>Preferencial</td>
         <td>Mensual</td>
-        <td>{{ site.data.generales.intereses.preferencial.mensual.colones[color] }}</td>
-        <td>{{ site.data.generales.intereses.preferencial.mensual.dolares[color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.colones[page.nivel_identificador] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.mensual.dolares[page.nivel_identificador] }}</td>
       </tr>
       <tr>
         <td></td>
         <td>Anual</td>
-        <td>{{ site.data.generales.intereses.preferencial.anual.colones[color] }}</td>
-        <td>{{ site.data.generales.intereses.preferencial.anual.dolares[color] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.colones[page.nivel_identificador] }}</td>
+        <td>{{ site.data.generales.intereses.preferencial.anual.dolares[page.nivel_identificador] }}</td>
       </tr>
       <tr>
         <td>Normal</td>
         <td>Mensual</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.colones[color] }}</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.colones[color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.nivel_identificador] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.colones[page.nivel_identificador] }}</td>
       </tr>
       <tr>
         <td></td>
         <td>Anual</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.color] }}</td>
-        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.color] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.nivel_identificador] }}</td>
+        <td>{{ site.data.generales.intereses.normal.mensual.dolares[page.nivel_identificador] }}</td>
       </tr>
     </tbody>
   </table>
